--- a/exercises/impc_workshop_exercises.ipynb
+++ b/exercises/impc_workshop_exercises.ipynb
@@ -221,9 +221,11 @@
    "source": [
     "### Exercise 4: Filtering Numerical Values and Applying Multiple Filters\n",
     "In addition to the `marker_symbol` filter, let's also apply more strict p-value threshold, so that it is less than 1e-4.\n",
-    "Modify query from exercise 3 and display 10 rows instead of 3. \n",
     "<br>\n",
-    "Note: Sometimes spelling may differ. `p_value` is the name of the field in Solr, whereas \"p-value\" is the term used in real life.\n",
+    "Modify query from exercise 3 and display **10 rows** instead of 3. \n",
+    "<br>\n",
+    "Note: Sometimes spelling may differ.\n",
+    "<br>e.g. **`p_value`** is the name of the field in Solr, whereas **\"p-value\"** is the term used in real life.\n",
     "<br>\n",
     "<br>\n",
     "If you complete the exercise successfully, your total number of documents will be **5**."
@@ -473,7 +475,7 @@
     "        'facet': 'on',\n",
     "        'facet.field': ...,\n",
     "        'facet.limit': 15,\n",
-    "        'facet.mincount': 0\n",
+    "        'facet.mincount': 1\n",
     "    }\n",
     ")"
    ]
@@ -501,8 +503,8 @@
    "id": "b0e918ce-12dc-4f91-a444-39887474dbff",
    "metadata": {},
    "source": [
-    "### Exercise 1: Getting familiar with the Phenodigm core\n",
-    "Get familiar with the phenodigm query structure. Write a query to retrieve 5 rows of the `disease_model_summary` type\n",
+    "### Exercise 1: Getting Familiar with the Phenodigm Core\n",
+    "Get familiar with the structure of the phenodigm core queries. Write a query to retrieve 5 rows of the `disease_model_summary` type\n",
     "\n",
     "If you complete the exercise successfully, your total number of documents will be **8,444,376**.\n"
    ]
@@ -515,7 +517,7 @@
    "outputs": [],
    "source": [
     "num_found, df = solr_request(\n",
-    "    core= ...,\n",
+    "    core=...,\n",
     "    params={\n",
     "        'q': ...,\n",
     "        'rows': ...\n",
@@ -528,14 +530,14 @@
    "id": "e2c2e890-1556-4a39-859c-f6272e224979",
    "metadata": {},
    "source": [
-    "### Exercise 2: Filtering by disease\n",
+    "### Exercise 2: Filtering by Disease\n",
     "\n",
-    "When filtering by disease we can filter by the following fields:\n",
+    "When filtering by disease, we can use the following fields:\n",
     "- `disease_term`\n",
     "- `disease_id`\n",
     "\n",
     "\n",
-    "Check the [documentation](https://www.ebi.ac.uk/mi/impc/solrdoc/phenodigm.html) and select the most appropriate `field` to filter by the disease: *[Robinow Syndrome](https://www.omim.org/entry/618529?search=618529&highlight=618529)*\n",
+    "Refer to the [documentation](https://www.ebi.ac.uk/mi/impc/solrdoc/phenodigm.html) and select the most appropriate `field` to filter for the disease: *[Robinow Syndrome](https://www.omim.org/entry/618529?search=618529&highlight=618529)*\n",
     "\n",
     "How many documents are there on *Robinow Syndrome*?\n",
     "\n",
@@ -563,18 +565,17 @@
    "id": "3395f7e6-2a80-488d-9297-ef45c841d0ba",
    "metadata": {},
    "source": [
-    "### Exercise 3: Filter mouse models related to a disease\n",
-    "Retrieve 5 rows containing mouse models (and their info) related to *Robinow Syndrome*\n",
+    "### Exercise 3: Filtering Mouse Models Related to a Disease\n",
+    "Retrieve the first 5 rows related to mouse models associated with *Robinow Syndrome*.\n",
     "\n",
-    "Use the fields below to get model information\n",
-    "- Some useful fields are:\n",
-    "    - `model_id`\n",
-    "    - `disease_term`\n",
-    "    - `disease_id`\n",
-    "    - `marker_id`\n",
-    "    - `marker_symbol`\n",
-    "    - `model_source`\n",
-    "    - `model_genetic_background`\n",
+    "Use the following fields to obtain the model information:\n",
+    "- `model_id`\n",
+    "- `disease_term`\n",
+    "- `disease_id`\n",
+    "- `marker_id`\n",
+    "- `marker_symbol`\n",
+    "- `model_source`\n",
+    "- `model_genetic_background`\n",
     "\n",
     "If you complete the exercise successfully, your total number of documents will be **11,655** and they will only display **7 fields**.\n"
    ]
@@ -598,10 +599,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "16c1940c",
+   "metadata": {},
+   "source": [
+    "## Advanced Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "470e0283-2e88-4c7a-84b0-cd5358d54802",
    "metadata": {},
    "source": [
-    "\n",
     "### Exercise 4: Calculate the Phenodigm score\n",
     "\n",
     "In this exercise, we will calculate the Phenodigm score, sort the results by this score, and filter the documents based on gene-disease curation.\n",
@@ -609,6 +617,7 @@
     "1. Retrieve all diseases related to the mouse gene *[Nxn](https://www.mousephenotype.org/data/genes/MGI:109331)* (MGI:109331)\n",
     "2. Select the following fields:\n",
     "    - `marker_id`\n",
+    "    - `model_id`\n",
     "    - `disease_id`\n",
     "    - `disease_term`\n",
     "    - `disease_model_avg_norm`\n",
@@ -635,9 +644,9 @@
     "num_found, df = solr_request(\n",
     "    core='phenodigm',\n",
     "    params={\n",
-    "        'q': ...,\n",
-    "        'fl': ...,\n",
-    "        'sort': ...,\n",
+    "        'q': 'type:disease_model_summary AND marker_id:\"MGI:109331\" AND association_curated:true',\n",
+    "        'fl': 'marker_id,model_id,disease_id,disease_term,disease_model_avg_norm,disease_model_max_norm,association_curated,phenodigm_score:div(sum(disease_model_avg_norm,disease_model_max_norm),2)',\n",
+    "        'sort':'div(sum(disease_model_avg_norm,disease_model_max_norm),2) desc'\n",
     "    }\n",
     ")"
    ]
@@ -651,7 +660,7 @@
     "### Exercise 5: Iterate over a list of diseases or models/ genes\n",
     "Now, we will define another helper function, `iterator_solr_request`. This function will request information for a list of values of a given `field`. This is particularly useful when we want to request data for specific models or genes.\n",
     "\n",
-    "Execute the functions below:"
+    "Execute the helper functions below:"
    ]
   },
   {
@@ -708,7 +717,7 @@
     "    print(f'Number of found documents: {data[\"response\"][\"numFound\"]}\\n')\n",
     "\n",
     "# Function to iterate over field list and write results to a file.\n",
-    "def iterator_solr_request(core, params, filename='iteration_solr_request', format='csv'):\n",
+    "def iterator_solr_request(core, params, filename='iteration_solr_request', format='json'):\n",
     "    \"\"\"Function to fetch results in batches from the Solr API and write them to a file\n",
     "        Defaults to fetching 5000 rows at a time.\n",
     "\n",
@@ -718,7 +727,7 @@
     "                       'field_list' and 'field_type' keys, which represent the list of field items (i.e., list of MGI model identifiers)\n",
     "                        to fetch and the type of the field (i.e., model_id) to filter on, respectively.\n",
     "        filename (str): The name of the file to write the results to. Defaults to 'iteration_solr_request'.\n",
-    "        format (str): The format of the output file. Can be 'csv' or 'json'. Defaults to 'csv'.\n",
+    "        format (str): The format of the output file. Can be 'csv' or 'json'. Defaults to 'json'.\n",
     "    \"\"\"\n",
     "\n",
     "    # Validate format\n",
@@ -747,33 +756,37 @@
     "    params[\"rows\"]=5000 # Fetch results in chunks of 5000\n",
     "\n",
     "\n",
-    "    # Fetch results using a generator function\n",
-    "    results_generator = entity_iterator(solr_url, params)\n",
+    "    try:\n",
+    "        # Fetch results using a generator function\n",
+    "        results_generator = entity_iterator(solr_url, params)\n",
+    "    except Exception as e:\n",
+    "        raise Exception(\"An error occurred while downloading the data: \" + str(e))\n",
     "\n",
     "    # Append extension to the filename\n",
     "    filename = f\"{filename}.{format}\"\n",
     "\n",
-    "    # Open the file in write mode\n",
-    "    with open(filename, \"w\", newline=\"\") as f:\n",
-    "        if format == 'csv':\n",
-    "            writer = None\n",
-    "            for item in results_generator:\n",
-    "                # Initialize the CSV writer with the keys of the first item as the field names\n",
-    "                if writer is None:\n",
-    "                    writer = csv.DictWriter(f, fieldnames=item.keys())\n",
-    "                    writer.writeheader()\n",
-    "                # Write the item to the CSV file\n",
-    "                writer.writerow(item)\n",
-    "                # Write to json without loading to memory.\n",
-    "        elif format == 'json':\n",
-    "            f.write('[')\n",
-    "            for i, item in enumerate(results_generator):\n",
-    "                if i != 0:\n",
-    "                    f.write(',')\n",
-    "                json.dump(item, f)\n",
-    "            f.write(']')\n",
-    "        else:\n",
-    "            raise ValueError(\"Invalid output format. Choose either 'csv' or 'json'.\")\n",
+    "    try:\n",
+    "        # Open the file in write mode\n",
+    "        with open(filename, \"w\", newline=\"\") as f:\n",
+    "            if format == 'csv':\n",
+    "                writer = None\n",
+    "                for item in results_generator:\n",
+    "                    # Initialize the CSV writer with the keys of the first item as the field names\n",
+    "                    if writer is None:\n",
+    "                        writer = csv.DictWriter(f, fieldnames=item.keys())\n",
+    "                        writer.writeheader()\n",
+    "                    # Write the item to the CSV file\n",
+    "                    writer.writerow(item)\n",
+    "                    # Write to json without loading to memory.\n",
+    "            elif format == 'json':\n",
+    "                f.write('[')\n",
+    "                for i, item in enumerate(results_generator):\n",
+    "                    if i != 0:\n",
+    "                        f.write(',')\n",
+    "                    json.dump(item, f)\n",
+    "                f.write(']')\n",
+    "    except Exception as e:\n",
+    "        raise Exception(\"An error occurred while writing the file: \" + str(e))\n",
     "\n",
     "    print(f\"File {filename} was created.\")"
    ]
@@ -783,7 +796,12 @@
    "id": "8b9a3482-e904-48aa-b6a2-78524639c3d4",
    "metadata": {},
    "source": [
-    "And this is how we can use it:"
+    "Here is how to use it:\n",
+    "- New information required from the user:\n",
+    "    - `field_list`: A list of field names to be queried in the API. (e.g., MGI ids, OMIM ids, gene ids).\n",
+    "    - `field_type`: The type of `field` we are querying. (e.g., `model_id`, `disease_id`, `marker_id`).\n",
+    "    - `filename`: The name of the file you wish to save the data in.\n",
+    "    - `format`: The format in which you want to save the data (e.g., `json`, `csv`)."
    ]
   },
   {
@@ -796,6 +814,7 @@
     "# List of model IDs.\n",
     "models = [\"MGI:3587188\",\"MGI:3587185\",\"MGI:3605874\",\"MGI:2668213\"]\n",
     "\n",
+    "# Call iterator function\n",
     "iterator_solr_request(\n",
     "    core='phenodigm', \n",
     "        params = {\n",
@@ -814,11 +833,11 @@
    "metadata": {},
    "source": [
     "### Bonus exercise\n",
-    "Now, make your own request based on the example above, with the following changes:\n",
+    "Now, build your own request based on the example above, incorporating the following changes:\n",
     "1. Use the `genotype-phenotype` core\n",
     "2. Iterate over genes (the name of the field is `marker_symbol`)\n",
     "3. Use the following list of genes: _Zfp580, Firrm, Gpld1, Mbip_\n",
-    "4. Modify the list of fields you request (`fl`):\n",
+    "4. Modify the list of fields you request (`fl`) to include:\n",
     "    - `marker_symbol`\n",
     "    - `allele_symbol`\n",
     "    - `parameter_stable_id`"
@@ -839,9 +858,9 @@
     "    'q': \"*:*\",\n",
     "    'fl': 'marker_symbol,allele_symbol,parameter_stable_id',\n",
     "    'field_list': ...,\n",
-    "    'field_type': ...,\n",
+    "    'field_type': ...\n",
     "}\n",
-    "iterator_solr_request(core='genotype-phenotype', params=params, filename='marker_symbol', format ='csv')"
+    "iterator_solr_request(core=..., params=params, filename= ..., format =...)"
    ]
   }
  ],
